# dikta-public

./: .env.example  .gitignore  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
android/kotlin-src/com/dikta/voice/: BubbleSettingsMenu.kt  DiktaAccessibilityService.kt  DiktaApi.kt  DiktaAudioRecorder.kt  DiktaOverlayService.kt  FloatingBubbleView.kt  MainActivity.kt
android/res-values/: strings.xml
android/res-xml/: accessibility_service_config.xml
src/: App.css  App.tsx  FloatingBar.tsx  Onboarding.tsx  main.tsx  media-recorder.ts  platform.ts  styles.css  tauri-commands.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/resources/: README.txt  RELEASE-NOTES.txt
src-tauri/src/: lib.rs  main.rs  pipeline.rs  test_helpers.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/audio/snapshots/: dikta_lib__audio__tests__compute_rms_speech_like.snap
src-tauri/src/commands/: dictionary.rs  history.rs  license.rs  misc.rs  mod.rs  recording.rs  settings.rs  whisper.rs
src-tauri/src/config/: mod.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/license/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/paste/: mod.rs
src-tauri/src/snapshots/: dikta_lib__pipeline__tests__compute_wav_rms_sine_tone.snap
src-tauri/src/stt/: local_whisper.rs  mod.rs  model_manager.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/vad/: mod.rs
src/components/: AdvancedSettingsPanel.tsx  CostDashboard.tsx  MobileTextarea.tsx  QuickTip.tsx  SettingsPanel.tsx  SnippetsPanel.tsx  VoiceNotesPanel.tsx  WhisperModelManager.tsx  icons.tsx  ui.tsx
src/hooks/: useLicense.ts  usePanels.ts  useQuickTip.ts  useRecording.ts  useSettings.ts
