[package]
name = "dikta"
version = "0.4.7"
description = "Free voice dictation with AI text cleanup"
authors = ["Andy"]
edition = "2021"

[lib]
name = "dikta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
log = "0.4"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base32 = "0.4"

# Desktop-only dependencies (not available on Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
cpal = "0.15"
arboard = "3"
voice_activity_detector = "0.2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
] }

# whisper-rs: offline STT fallback (CPU-only by default; CUDA support is an
# optional feature flag for later). Windows-only because:
# - Android: cloud STT is used exclusively (GGML aarch64 build needs extra cmake)
# - Linux/macOS: not yet supported in production, cmake may not be available
[target.'cfg(windows)'.dependencies.whisper-rs]
version = "0.15.1"

[dev-dependencies]
tempfile = "3"
insta = "1"
